--- a/src/app/investment-results/investment-results.component.html
+++ b/src/app/investment-results/investment-results.component.html
@@ -13,10 +13,10 @@
         @for (investment of investmentService.getAnnualData; track investment.year) {
         <tr>
             <td>{{ investment.year }}</td>
-            <td>{{ investment.valueEndOfYear }}</td>
-            <td>{{ investment.interest }}</td>
-            <td>{{ investment.totalInterest }}</td>
-            <td>{{ investment.totalAmountInvested }}</td>
+            <td>{{ investment.valueEndOfYear | currency:"EUR" }}</td>
+            <td>{{ investment.interest | currency }}</td>
+            <td>{{ investment.totalInterest | currency }}</td>
+            <td>{{ investment.totalAmountInvested | currency }}</td>
         </tr>
         }
     </tbody>
