--- a/src/app/investment-results/investment-results.component.html
+++ b/src/app/investment-results/investment-results.component.html
@@ -1,4 +1,7 @@
-@if (investmentService.getAnnualData) {
+@if (!results) {
+<h4 class="info">Please enter some values and press "Calculate".</h4>
+}
+@else {
 <table>
     <thead>
         <tr>
@@ -10,7 +13,7 @@
         </tr>
     </thead>
     <tbody>
-        @for (investment of investmentService.getAnnualData; track investment.year) {
+        @for (investment of results; track investment.year) {
         <tr>
             <td>{{ investment.year }}</td>
             <td>{{ investment.valueEndOfYear }}</td>
@@ -21,7 +24,4 @@
         }
     </tbody>
 </table>
-}
-@else {
-<h4 class="info">Please enter some values and press "Calculate".</h4>
 }
